--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <li>1988-92, Bachelor of Engineering, Pulp & Paper Engineering, University of Roorkee, Roorkee.</li>
         </ul> -->
 
-        <h3 style="color: rgb(232, 56, 56);">Areas of Research:</h3>
+        <!-- <h3 style="color: rgb(232, 56, 56);">Areas of Research:</h3>
             
         <ul>
             <li>Process Audit and Pinch analysis</li>
@@ -91,18 +91,18 @@
             <li>Industrial Pollution Abatement</li>
             <li>Solid and liquid Waste Management</li>
             <li>Sanitation and hygeine</li>
-            <!-- <li>Human health & safety</li> -->
+            <li>Human health & safety</li>
             <li>Sustainable Utilization of natural resources</li>
             <li>Life cycle assessment</li>
             <li>Green product Development</li>
             <li>Valorization of waste</li>
             <li>Biomass bio-refinery</li>
-            <!-- <li>Utilization of Waste in composites and building materials</li> -->
+            <li>Utilization of Waste in composites and building materials</li>
             <li>Clean & Sustainable Technologies</li>
             <li>Technology Diffusion, and community engagement</li>
             <li>Tribal tradition and cultural practices</li>
             <li>Capacity building and Livelihood generation in rural areas</li>
-        </ul>
+        </ul> -->
 
         <h3 style="color: rgb(232, 56, 56);">Teaching Experience</h3>
         <ul>
