--- a/research areas.html
+++ b/research areas.html
@@ -50,8 +50,8 @@
         }
         .carousel-container {
             position: relative;
-            width: 1000px;
-            height: 500px;
+            width: 1100px;
+            height: 630px;
             overflow: hidden;
             border-radius: 10px;
             background-color: rgb(255, 255, 255);
@@ -68,24 +68,21 @@
             flex-direction: row;
             align-items: center;
         }
-        .carousel-item img {
-            /* border-radius: 50%; */
-            margin-right: 50px;
-        }
+
         .carousel-item-content {
-            max-width: 500px;
+            text-align: center; /* Centers the content */
+            padding: 20px; /* Adds some padding around the content */
             font-size: larger;
         }
-        .carousel-item-content p {
-            margin: 10px 0;
-        }
+
         .carousel-item-content h3 {
-            margin: 0;
+            margin-bottom: 20px; /* Adds space between the heading and the image */
             color: rgb(134, 20, 20);
         }
-        .carousel-item-content span {
-            font-size: 1.1em;
-            color: rgb(134, 20, 20);
+
+        .carousel-item-content img {
+            max-width: 100%; /* Ensures the image fits within the container */
+            height: auto; /* Maintains the aspect ratio */
         }
         .nav-buttons {
             position: absolute;
@@ -108,35 +105,38 @@
     </style>
 </head>
 <body>
-    <div class="carousel-container">
+    <div class="carousel-container" style="margin-top: 50px;">
         <div class="carousel">
             <div class="carousel-item">
-                <img src="pics vivek/ajay yadav.jpg" alt="Person 1" width="300" height="400">
                 <div class="carousel-item-content">
-                    <p>"As one of the oldest members at Devtron, it’s safe to say that my experience with the company has been phenomenal. In the role of a Product Designer at Devtron, I’ve had the opportunity to be a part of some really interesting projects that have helped me understand the user needs to great lengths and further expand my knowledge and skillsets. Working on the product has given me some invaluable insights into the DevOps space and I look forward to learning more! I am really grateful to work in a place that makes us grow to greater heights every day.”</p>
-                    <h3>Utkarsh Arya</h3>
-                    <span>Product Designer, Devtron Inc</span>
+                    <img src="pics vivek/area1.png" alt="Person 1" width="1200" height="1000">
                 </div>
-            </div>
+            </div>            
 
             <div class="carousel-item">
-                <img src="pics vivek/ajay yadav.jpg" alt="Person 1" width="300" height="400">
                 <div class="carousel-item-content">
-                    <p>"As one of the oldest members at Devtron, it’s safe to say that my experience with the company has been phenomenal. In the role of a Product Designer at Devtron, I’ve had the opportunity to be a part of some really interesting projects that have helped me understand the user needs to great lengths and further expand my knowledge and skillsets. Working on the product has given me some invaluable insights into the DevOps space and I look forward to learning more! I am really grateful to work in a place that makes us grow to greater heights every day.”</p>
-                    <h3>Utkarsh Arya</h3>
-                    <span>Product Designer, Devtron Inc</span>
+                    <img src="pics vivek/area2.png" alt="Person 1" width="1200" height="990">
                 </div>
-            </div>
+            </div>   
 
             <div class="carousel-item">
-                <img src="pics vivek/ajay yadav.jpg" alt="Person 1" width="300" height="400">
                 <div class="carousel-item-content">
-                    <p>"As one of the oldest members at Devtron, it’s safe to say that my experience with the company has been phenomenal. In the role of a Product Designer at Devtron, I’ve had the opportunity to be a part of some really interesting projects that have helped me understand the user needs to great lengths and further expand my knowledge and skillsets. Working on the product has given me some invaluable insights into the DevOps space and I look forward to learning more! I am really grateful to work in a place that makes us grow to greater heights every day.”</p>
-                    <h3>Utkarsh Arya</h3>
-                    <span>Product Designer, Devtron Inc</span>
+                    <img src="pics vivek/area3.png" alt="Person 1" width="1200" height="1000">
+                </div>
+            </div>   
+
+            <div class="carousel-item">
+                <div class="carousel-item-content">
+                    <img src="pics vivek/area4.png" alt="Person 1" width="1200" height="1000">
                 </div>
             </div>
-            <!-- Add more items as needed -->
+            
+            <div class="carousel-item">
+                <div class="carousel-item-content">
+                    <img src="pics vivek/area5.png" alt="Person 1" width="1200" height="1000">
+                </div>
+            </div>   
+
         </div>
         <div class="nav-buttons">
             <button class="prev">‹</button>
